--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "datasets>=3.3.0",
+    "torch>=2.6.0",
     "transformers>=4.48.2",
+    "trl>=0.15.0",
+    "wandb>=0.19.6",
 ]
