--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "datasets>=3.3.0",
+    "sentence-transformers>=4.1.0",
     "torch>=2.6.0",
     "transformers>=4.48.2",
     "trl>=0.15.0",
