--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,12 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "datasets>=3.3.0",
+    "fugashi>=1.4.0",
     "sentence-transformers>=4.1.0",
+    "sentencepiece>=0.2.0",
     "torch>=2.6.0",
     "transformers>=4.48.2",
     "trl>=0.15.0",
+    "unidic-lite>=1.0.8",
     "wandb>=0.19.6",
 ]
