fix dataset version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "datasets>=3.3.0",
+    "datasets==3.6.0",
     "fugashi>=1.4.0",
     "sentence-transformers>=4.1.0",
     "sentencepiece>=0.2.0",
